--- a/scripts/kallisto_Deseq_analysis.Rmd
+++ b/scripts/kallisto_Deseq_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "RNA-Seq-Analysis"
+title: "Kallisto_Deseq_Analysis"
 author: "Fred Kebaso | Margaret Chifwete | Lmelias Luke"
 date: "12/2/2020"
 output: html_document
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 First Import sample metadata. The levels of samples are re-ordered so that the level specified by ref is first and the others are moved down. This is useful for control-treatment contrasts which take the first level as the reference.
 
 ```{r}
-metadata <- read.csv('practice.dataset.metadata.csv', sep = '\t', header = T, stringsAsFactors = T)
+metadata <- read.csv('practice.dataset.metadata.tsv', sep = '\t', header = T, stringsAsFactors = T)
 
 metadata
 
@@ -27,10 +27,31 @@ metadata$Condition <- relevel(metadata$Condition, ref = 'normal')
 Import Kallisto directory containing sample abundances using tximportData. This package provides the output of kallisto.
 
 ```{r}
-library(tximportData) 
+#library(tximportData) 
 
 dir <- ("~/Desktop/kallisto_results")
 list.files(dir) #list directories file paths to see whether you imported the right one
+```
+tx2gene
+
+```{r}
+library(GenomicFeatures) 
+library(AnnotationDbi)
+library(org.Hs.eg.db)
+library(reactome.db)
+
+url="ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_36/gencode.v36.annotation.gff3.gz"
+#download.file(url = url, "gencode.v36.annotation.gff3.gz")
+
+txdb <- makeTxDbFromGFF("gencode.v36.annotation.gff3.gz")
+txdb
+
+gene_id <- keys(txdb, keytype = "GENEID")
+
+tx2gene <- AnnotationDbi::select(txdb, keys = gene_id, keytype = "GENEID", columns = "TXNAME")
+
+
+
 ```
 
 Import the abundances for each sample using tximport package. This package imports transcript-level abundance(TPM), estimated counts and transcript lengths, and summarizes into matrices for use with downstream gene-level analysis packages. Average transcript length, weighted by sample-specific transcript abundance estimates, is provided as a matrix which can be used as an offset for different expression of gene-level counts.
@@ -43,7 +64,7 @@ library(tximport)
 files <- file.path(dir, metadata$SampleID, "abundance.h5")
 names(files) <- metadata$SampleID
 head(files) 
-txi.kallisto <- tximport(files, type = "kallisto", txOut = TRUE)
+txi.kallisto <- tximport(files, type = "kallisto", tx2gene = tx2gene, txOut = TRUE)
 ```
 
 Use head() to see Kallisto counts imported by tximport
